asteria/core/tests/errors/elaboration_errors/type_variable_used_as_term_variable_hint_no_term_variables_in_scope.asteriacore
f : forall {a : Type}. a
  = \{a} -> a;;
